# fxrwxrd

./: .gitignore  CMakeLists.txt  README.md  plugin.inc.in  pluginconfig.h.in
Plugin/src/api/mysql/: Database.cpp  Database.h  MySQLConnector.cpp  MySQLConnector.h  SQLEvent.cpp  SQLEvent.h  SQLQuery.cpp  SQLQuery.h  SQLResult.cpp  SQLResult.h  queries.h
Plugin/src/api/mysql/database/: LogsDatabase.cpp  LogsDatabase.h  MainDatabase.cpp  MainDatabase.h  databases.h
Plugin/src/server/core/account/: Account.cpp  Account.h  AccountLevel.cpp  AccountLevel.h  AccountLicense.cpp  AccountLicense.h  AccountLocale.cpp  AccountLocale.h  AccountPassword.cpp  AccountPassword.h
Plugin/src/server/core/admin/: Admin.cpp  Admin.h  AdminPassword.cpp  AdminPassword.h
Plugin/src/server/core/admin_rcon/: RconAdmin.cpp  RconAdmin.h
Plugin/src/server/core/animal/: Animal.cpp  Animal.h
Plugin/src/server/core/config/: Config.cpp  Config.h  RconConfig.cpp  RconConfig.h  RegistrationConfig.cpp  RegistrationConfig.h  configs.h
Plugin/src/server/core/entity/: Entity.cpp  Entity.h  LawSubject.cpp  LawSubject.h  LegalEntity.cpp  LegalEntity.h  TrackedEntity.cpp  TrackedEntity.h
Plugin/src/server/core/inventory/: Inventory.cpp  Inventory.h  Item.cpp  Item.h  ItemType.h
Plugin/src/server/core/manager/: DialogManager.cpp  ServiceManager.cpp  ServiceManager.h  managers.h
Plugin/src/server/core/person/: Person.cpp  Person.h  PersonAge.cpp  PersonAge.h  PersonArmour.cpp  PersonArmour.h  PersonCamera.cpp  PersonCamera.h  PersonHealth.cpp  PersonHealth.h  PersonIP.cpp  PersonIP.h  PersonLevel.cpp  PersonLevel.h  PersonName.cpp  PersonName.h  PersonPosition.cpp  PersonPosition.h  PersonScore.cpp  PersonScore.h  PersonSex.cpp  PersonSex.h  PersonSkin.cpp  PersonSkin.h  PersonSpawn.cpp  PersonSpawn.h  PersonTeam.cpp  PersonTeam.h
Plugin/src/server/core/player/: Player.cpp  Player.h  PlayerDialog.cpp  PlayerDialog.h  PlayerLicense.cpp  PlayerLicense.h  PlayerPassword.cpp  PlayerPassword.h  player_functions.cpp  player_natives.cpp
Plugin/src/server/core/server/: Server.cpp  Server.h
Plugin/src/server/core/vehicle/: Vehicle.cpp  Vehicle.h  VehicleColor.cpp  VehicleColor.h  VehicleComponent.cpp  VehicleComponent.h  VehicleConfiguration.cpp  VehicleConfiguration.h  VehicleDamage.cpp  VehicleDamage.h  VehicleInfo.cpp  VehicleInfo.h  VehicleModel.cpp  VehicleModel.h  VehicleParam.cpp  VehicleParam.h  VehiclePosition.cpp  VehiclePosition.h  VehicleSignal.cpp  VehicleSignal.h  vehicle_callbacks.cpp
Plugin/src/server/core/vehicle_data/: VehicleData.cpp  VehicleData.h  VehicleLicensePlate.cpp  VehicleLicensePlate.h
Plugin/src/server/events/: EventHandler.cpp  PlayerEventHandler.cpp  PlayerEventHandler.h  ServerEventHandler.cpp  VehicleEventHandler.h  event_handlers.h
Plugin/src/server/events/main/: PlayerCommandTextHandler.cpp  PlayerCommandTextHandler.h  PlayerDialogResponseHandler.cpp  PlayerDialogResponseHandler.h  PlayerTextHandler.cpp  PlayerTextHandler.h
Plugin/src/server/events/player/: PlayerConnectHandler.cpp  PlayerConnectHandler.h  PlayerDisconnectHandler.cpp  PlayerDisconnectHandler.h  PlayerIncomingConnectionHandler.cpp  PlayerIncomingConnectionHandler.h  PlayerRequestClassHandler.cpp  PlayerRequestClassHandler.h  PlayerSpawnHandler.cpp  PlayerSpawnHandler.h
Plugin/src/server/events/server/: ServerGameModeExitHandler.cpp  ServerGameModeInitHandler.cpp
Plugin/src/server/events/vehicle/: VehicleDamageHandler.cpp  VehicleDamageHandler.h  VehicleDeathHandler.cpp  VehiclePaintJobHandler.h  VehicleParamsUpdateHandler.cpp  VehicleParamsUpdateHandler.h  VehicleResprayHandler.cpp  VehicleSirenStateChangeHandler.cpp  VehicleSirenStateChangeHandler.h  VehicleStreamOutHandler.h
Plugin/src/server/handlers/: EventHandler.h  PlayerEventHandler.cpp  PlayerEventHandler.h  ServerEventHandler.h  VehicleEventHandler.cpp  VehicleEventHandler.h  event_handlers.h
Plugin/src/server/handlers/main/: PlayerCommandTextHandler.cpp  PlayerCommandTextHandler.h  PlayerDialogResponseHandler.cpp  PlayerDialogResponseHandler.h  PlayerTextHandler.cpp  PlayerTextHandler.h
Plugin/src/server/handlers/player/: PlayerConnectHandler.cpp  PlayerConnectHandler.h  PlayerDisconnectHandler.cpp  PlayerDisconnectHandler.h  PlayerIncomingConnectionHandler.cpp  PlayerIncomingConnectionHandler.h  PlayerRequestClassHandler.cpp  PlayerRequestClassHandler.h  PlayerSpawnHandler.cpp  PlayerSpawnHandler.h
Plugin/src/server/handlers/server/: ServerGameModeExitHandler.h  ServerGameModeInitHandler.cpp  ServerGameModeInitHandler.h
Plugin/src/server/handlers/vehicle/: VehicleDamageHandler.cpp  VehicleDamageHandler.h  VehicleDeathHandler.cpp  VehicleDeathHandler.h  VehiclePaintJobHandler.cpp  VehiclePaintJobHandler.h  VehicleParamsUpdateHandler.cpp  VehicleParamsUpdateHandler.h  VehicleResprayHandler.cpp  VehicleResprayHandler.h  VehicleSirenStateChangeHandler.cpp  VehicleSirenStateChangeHandler.h  VehicleSpawnHandler.cpp  (+5 more)
Plugin/src/server/machines/: machines.h  machines_events.h
Plugin/src/server/managers/: DialogManager.h  StateMachineManager.cpp  StateMachineManager.h  managers.h
Plugin/src/server/services/: PlayerService.cpp  PlayerService.h  ServerService.cpp  ServerService.h  Service.cpp  Service.h  VehicleService.cpp  VehicleService.h  services.h
Plugin/src/server/storage/: JsonRepository.cpp  JsonRepository.h  Repository.cpp  repositories.h
Plugin/src/server/storages/: MySQLRepository.cpp  MySQLRepository.h  Repository.cpp  Repository.h  RepositoryInterface.cpp  RepositoryInterface.h  repositories.h
Plugin/src/utils/: defines.h
Plugin/src/utils/color/: Color.cpp  Color.h
Plugin/src/utils/except/: Exception.cpp  Exception.h
Plugin/src/utils/log/: ErrorLog.cpp  ErrorLog.h  FatalLog.cpp  FatalLog.h  InfoLog.cpp  InfoLog.h  Log.cpp  Log.h  WarningLog.cpp  WarningLog.h  logs.h
Plugin/src/utils/math/: geometry.h  vec2d.cpp  vec2d.h  vec3d.cpp  vec3d.h  vec4d.cpp  vec4d.h
Plugin/src/utils/ptr/: any_ptr.cpp  any_ptr.h  ptr_t.cpp  ptr_t.h
Server/: server.cfg
Server/gamemodes/: gamemode.amx  gamemode.pwn
(+127 files in other folders)
